<resources>
    <string name="app_name">Portfolio_2</string>
    <string name="eportfolio">ePortfolio</string>
    <string name="logging">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="em_pass_label">Wprowadź</string>
    <string name="email_label">Wprowadź e-mail</string>
    <string name="password_label">Wprowadź hasło</string>
    <string name="confirm">Zatwierdź</string>
    <string name="waiting">Oczekuję</string>
    <string name="search_category">Lupa</string>
    <string name="search">Szukaj</string>
    <string name="profile">Profil</string>
    <string name="about_me"><u>O mnie</u></string>
    <string name="experience"><u>Doświadczenie</u></string>
    <string name="education"><u>Wykształcenie</u></string>
    <string name="activity"><u>Aktywność</u></string>
    <string name="languages"><u>Języki</u></string>
    <string name="me">Me</string>
</resources>