<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.portfolio_2.CheckLoggingFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/roboto_bold_italic"
            android:text="@string/eportfolio"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <Button
            android:id="@+id/login_button"
            style="@style/LoggingOptionsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/white"
            android:text="@string/logging"
            app:cornerRadius="50sp" />

        <Button
            android:id="@+id/register_button"
            style="@style/LoggingOptionsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            app:cornerRadius="50sp" />

    </LinearLayout>
</layout>