<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/navy_blue_gradient"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eportfolio_text_view"
                style="@style/EportfolioTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="40sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/log_in_text_view"
            style="@style/LoggingConfirmStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logging" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:hint="@string/email_label"
            app:boxStrokeColor="@color/mtrl_outlined_stroke_color"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:helperTextEnabled="true"
            app:helperText="@string/waiting"
            app:errorEnabled="true"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:hint="@string/email_label"
            app:boxStrokeColor="@color/mtrl_outlined_stroke_color"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:helperTextEnabled="true"
            app:helperText="@string/waiting"
            app:errorEnabled="true"
            app:errorTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/confirm_button"
            style="@style/LoggingOptionsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="30sp"
            app:cornerRadius="50sp"
            app:strokeColor="@color/light_gray"
            app:strokeWidth="2dp" />

    </LinearLayout>

</layout>